creating bootstrap landing page

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,4 +10,8 @@ html {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
 }
+
+section {
+  padding: 60px 0;
+}
 /*# sourceMappingURL=style.css.map */
