--- a/app/index.njk
+++ b/app/index.njk
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     <link rel="stylesheet" href="/dist/assets/style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Bootstrap Based landing page</title>
 </head>
@@ -62,14 +60,14 @@
                 <div class="col-md-5 text-center d-none d-md-block">
                     <!-- tooltip -->
                     <span class="tt" data-bs-placement="bottom" title="Net Ninja Book cover">
-                        <img class="img-fluid" src="assets/image/ebook-cover.png" alt="ebook cover">
+                        <img class="img-fluid" src="/dist/assets/image/ebook-cover.png" alt="ebook cover">
                     </span>
                 </div>
             </div>
         </div>
     </section>
     <!-- pricing plan -->
-    <section id="pricing" class="bg-light mt-5">
+    <section id="pricing" class="bg-altlight mt-5">
         <div class="container-lg">
             <div class="text-center">
                 <h2>Pricing Plan</h2>
@@ -92,7 +90,7 @@
                 </div>
 
                 <div class="col-9 col-lg-4 ">
-                    <div class="card border-primary border-2">
+                    <div class="card border-primary border-2 br-5">
                         <div class="card-header text-center text-primary">Most Popular</div>
                         <div class="card-body text-center py-5">
                             <h4 class="card-title">Complete Edition</h4>
@@ -131,7 +129,7 @@
 
             <div class="row my-5 g-5 justify-content-around align-items-center">
                 <div class="col-6 col-lg-4">
-                    <img src="/assets/image/kindle.png" class="img-fluid" alt="ebook">
+                    <img src="/dist/assets/image/kindle.png" class="img-fluid" alt="ebook">
                 </div>
 
                 <div class="col-lg-6">
@@ -249,7 +247,7 @@
     </section>
 
     <!-- review list -->
-    <section id="reviews" class="bg-light">
+    <section id="reviews" class="bg-altlight">
         <div class="container-lg">
             <div class="text-center">
                 <h2><i class="bi bi-stars"></i> Book Reviews</h2>
@@ -413,7 +411,7 @@
     </section>
 
     <!-- get updates/ model trigger -->
-    <section class="bg-light">
+    <section class="bg-altlight">
         <div class="container">
             <div class="text-center">
                 <h2>Stay in The Loop</h2>
@@ -482,7 +480,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    <script src="assets/js/main.js"></script>
+    <script src="/dist/assets/js/main.js"></script>
 </body>
 
 </html>
